--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "@types/chart.js": "^2.7.40",
     "angular-bootstrap-md": "^6.3.0",
+    "angularx-social-login": "^1.2.3",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "font-awesome": "~4.7.x",
