--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "start_with_ssl": "ng serve --ssl=true",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
